--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node out/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q .\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +16,6 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
     "concurrently": "^7.4.0",
-    "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "typescript": "^4.8.4"
   },
@@ -22,6 +23,7 @@
     "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongodb": "^4.11.0",
     "mongoose": "^6.6.7"
   }
